[package]
name = "egui_glium"
version = "0.23.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "Bindings for using egui natively using the glium library"
edition = "2021"
rust-version = "1.70"
homepage = "https://github.com/fayalalebrun/egui_glium"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/fayalalebrun/egui_glium"
categories = ["gui", "game-development"]
keywords = ["glium", "egui", "gui", "gamedev"]

[package.metadata.docs.rs]
all-features = true


[features]
default = ["clipboard", "links"]

## Enable cut/copy/paste to OS clipboard.
##
## If disabled a clipboard will be simulated so you can still copy/paste within the egui app.
clipboard = ["egui-winit/clipboard"]

## Enable opening links in a browser when an egui hyperlink is clicked.
links = ["egui-winit/links"]


[dependencies]
egui = { version = "0.23.0", default-features = false, features = [
  "bytemuck",
  "default_fonts"
] }
egui-winit = { version = "0.23.0", default-features = false }

ahash = { version = "0.8.1", default-features = false, features = [
  "no-rng", # we don't need DOS-protection, so we let users opt-in to it instead
  "std",
] }
bytemuck = "1.7"
glium = "0.33"
winit = "0.28"

#! ### Optional dependencies
## Enable this when generating docs.
document-features = { version = "0.2", optional = true }


[dev-dependencies]
egui_demo_lib = { version = "0.23.0", default-features = false }
image = { version = "0.24", default-features = false, features = ["png"] }