[package]
name = "egui_glium"
version = "0.29.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "Bindings for using egui natively using the glium library"
edition = "2021"
rust-version = "1.76"
homepage = "https://github.com/fayalalebrun/egui_glium"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/fayalalebrun/egui_glium"
categories = ["gui", "game-development"]
keywords = ["glium", "egui", "gui", "gamedev"]

[package.metadata.docs.rs]
all-features = true


[features]
default = ["clipboard", "links"]

## Enable cut/copy/paste to OS clipboard.
##
## If disabled a clipboard will be simulated so you can still copy/paste within the egui app.
clipboard = ["egui-winit/clipboard"]

## Enable opening links in a browser when an egui hyperlink is clicked.
links = ["egui-winit/links"]


[dependencies]
egui = { version = "0.29", default-features = false, features = [
  "bytemuck",
  "default_fonts"
] }
egui-winit = { version = "0.29", default-features = false }

ahash = { version = "0.8", default-features = false, features = [
  "no-rng", # we don't need DOS-protection, so we let users opt-in to it instead
  "std",
] }
bytemuck = "1.7"
glium = "0.36"
winit = "0.30"
log = "0.4"
raw-window-handle = "0.6"

#! ### Optional dependencies
## Enable this when generating docs.
document-features = { version = "0.2", optional = true }


[dev-dependencies]
egui_demo_lib = { version = "0.29", default-features = false }
image = { version = "0.24", default-features = false, features = ["png"] }
